Some Requested Changes
Fixed the carousel items. Added some photos to the image folder

--- a/index.html
+++ b/index.html
@@ -84,11 +84,20 @@
       <!--Wrapper for Slides-->
       <div class = "carousel-inner">
         <div class = "item active">
-          <a href= "https://docs.google.com/forms/d/1qJwVzm5mgNNoVNnzB3CvxawlhofRYEF7qo1V4QaNAuY/closedform" target = "_new"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/Cornerstone%20Case%20Competition.png"></a>
+          <a href= "http://cornellconsultingclub.com/ccc/recruiting/resume-help" target = "_new"><img class = "img-responsive" src = "images/campusengagement.jpeg"></a>
           <div class = "container-fluid">
             <div class = "carousel-caption">
-              <h1>Cornerstone Research 2015 Case Competition</h1>
-              <p>Join us and the team from Cornerstone Research for a case competition, information session and networking session, with free food and drinks!</p>
+              <h1>Campus Engagement</h1>
+              <p>Whether you are a member or non-member, we are the campus’s go to resources for undergraduate consulting needs. From resume reviews to professional development, our public education series serve as a pragmatic starting point for anyone’s consulting interests.</p>
+            </div>
+          </div>
+        </div>
+        <div class = "item">
+          <a href= "https://docs.google.com/forms/d/1qJwVzm5mgNNoVNnzB3CvxawlhofRYEF7qo1V4QaNAuY/closedform" target = "_new"><img class = "img-responsive" src = "images/casecompetition.png"></a>
+          <div class = "container-fluid">
+            <div class = "carousel-caption">
+              <h1>Case Competition</h1>
+              <p>Our services have traditionally concentrated in sales and marketing strategy, organizational strategy and business unit strategy to companies in different industries including private equity, energy and gas, high technology and financial services.</p>
             </div>
           </div>
         </div>
@@ -199,21 +208,21 @@
 <div id = "applySect" class = "sect sectC">
 <h1 class = "text-center">APPLY</h1>
 <p>
-  <span><strong>Gain Consulting Experience</strong></span>
+  <span><strong>GAIN CONSULTING EXPERIENCE</strong></span>
   <br>
   We go beyond just consulting education -- our members receive hands-on experience by providing real-world clients to work with. Whether it be project work for a Fortune 500 company, a boutique firm, or a startup, our club's business model allows for members to leverage their knowledge from Cornell and expand their professional career. If you've ever wanted to excel, this is the place to do so.<br>
   <br>
   <hr align="center">
 </p>
 <p>
-  <span><strong>Expand Your Network</strong></span>
+  <span><strong>EXPAND YOUR NETWORK</strong></span>
   <br>
   Our organization is the oldest consulting organization on campus. This means members have access to alumni spanning several industries and firms. Our alumni have landed in the top firms of professional services firms, meaning the best in the industry will come back to frequently assist and educate members. Additionally, our on campus network is just as valuable. The members of this club are leaders on campus, and the university faculty associated with this club are consultants with years of management consulting experience.<br>
   <br>
   <hr>
 </p>
 <p>
-  <span><strong>Educational Program</strong></span>
+  <span><strong>EDUCATIONAL PROGRAM</strong></span>
   <br>
   Our executive board provides an extensive educational program for students interested in consulting. Our education series is open to the public, but membership means additional hands-on learning that can't be found elsewhere. Our training has been crafted by borrowing heavily from training programs of real firms, meaning participants will be prepared for the real industry by the time they graduate. <br>
   <br>
